* Readded hookconfigurators.properties, because it didn't work on my machine without this file.
git-svn-id: https://svn.jfire.org/svn/main/trunk/JFireIntegrationJBoss@19363 18c61ebf-f106-0410-9e1e-81fb82415b8f